fix(sidebar): fix quick navbar is layered behind user profile

--- a/components/views/navigation/server/sidebar/Sidebar.less
+++ b/components/views/navigation/server/sidebar/Sidebar.less
@@ -4,7 +4,6 @@
 @sidebar-inner-streaming-pad: 2rem;
 @mobile-sidebar-inner-streaming-pad: 6rem;
 
-
 #sidebar {
   width: @sidebar-size;
   min-width: @sidebar-size;
@@ -15,7 +14,6 @@
   flex-direction: column;
   padding-bottom: @normal-spacing;
   z-index: @base-z-index;
-
 
   .servers {
     z-index: @base-z-index + 3;
@@ -48,7 +46,9 @@
   }
 
   .sidebar-inner-streaming {
-    max-height: calc(var(--app-height) - @sidebar-inner-offset - @sidebar-inner-streaming-pad);
+    max-height: calc(
+      var(--app-height) - @sidebar-inner-offset - @sidebar-inner-streaming-pad
+    );
   }
 
   .controls {
@@ -56,6 +56,9 @@
     &:extend(.round-corners);
     padding: @light-spacing @normal-spacing @normal-spacing @normal-spacing;
     box-shadow: @ui-shadow;
+    &.mobile {
+      margin-bottom: @mobile-nav-size;
+    }
   }
 
   .filler {
